# alternative_universe_generator

./: .editorconfig.py  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  MAKEFILEdeb  README.md  compose.override.dev.yaml  docker-compose.yml  main.py  makefile  pyproject.toml  requirements.txt  ruff.toml
data/: historical_events.json
src/: alternative_generator.py  consequence_engine.py  event_selector.py  exceptions.py  imports.py  text_formatter.py  world_builder.py
tests/: conftest.py  test_alternative_generator.py  test_event_selector.py  test_main.py  test_text_formatter.py  test_world_builder.py
